[gd_scene load_steps=14 format=3 uid="uid://dj241cjkg3a7h"]

[ext_resource type="Script" path="res://top_door.gd" id="1_juv84"]
[ext_resource type="Texture2D" uid="uid://dmqjcr0sxhaag" path="res://Vertical_door.png" id="2_o641f"]
[ext_resource type="AudioStream" uid="uid://dic2ulxcsobkl" path="res://iron-whoosh-47121.mp3" id="3_rw7yu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bsskk"]
size = Vector2(152.667, 55.2)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkgoy"]
atlas = ExtResource("2_o641f")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdaop"]
atlas = ExtResource("2_o641f")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_elyhl"]
atlas = ExtResource("2_o641f")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_abpnu"]
atlas = ExtResource("2_o641f")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_roto6"]
atlas = ExtResource("2_o641f")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_knmxx"]
atlas = ExtResource("2_o641f")
region = Rect2(960, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_8js2u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkgoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdaop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elyhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abpnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_roto6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knmxx")
}],
"loop": false,
"name": &"Top",
"speed": 5.0
}]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_h0rp6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kst48"]
size = Vector2(202, 28)

[node name="TopDoor" type="Node2D"]
script = ExtResource("1_juv84")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -26)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-13.5, 0)
rotation = 1.5708
scale = Vector2(1.25, 1.25)
shape = SubResource("RectangleShape2D_bsskk")

[node name="TopDoorAnimation" type="AnimatedSprite2D" parent="Area2D"]
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_8js2u")
animation = &"Top"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Area2D"]
stream = ExtResource("3_rw7yu")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2
physics_material_override = SubResource("PhysicsMaterial_h0rp6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-15, -28)
rotation = 1.5708
shape = SubResource("RectangleShape2D_kst48")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="Area2D/TopDoorAnimation" to="." method="_on_animation_finished"]
